set tools into path

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ install:
 - dir c:\msys64\mingw64
 
 build_script:
-- set PATH=C:\msys64;C:\MINGW\bin\;%PATH%
+- set PATH=Cc:\msys64\mingw64\bin;C:\MINGW\bin\;%PATH%
 - scripts\windows\build.bat
 
 test_script:
