--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,8 +6,8 @@ environment:
 
 install:
 - go version
-- dir c:\msys64\mingw64
-- where cc1.exe
+#- dir c:\msys64\mingw64
+#- where cc1.exe
 
 build_script:
 - set PATH=C:\msys64\mingw64\bin;C:\MINGW\bin\;%PATH%
