--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,8 @@ environment:
 
 install:
 - go version
+- set PATH=%GOPATH%\bin;c:\go\bin;%PATH%
+- mkdir %GOPATH%
 #- dir c:\msys64\mingw64
 #- where cc1.exe
 
