go version, go env

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,8 @@ environment:
 
 install:
 - set PATH=%GOPATH%\bin;c:\go\bin;%PATH%
+- go version
+- go env
 - mkdir c:\gopath\bin
 - mkdir %GOPATH%\src\github.com\hashicorp
 - cd ..
