--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,10 +3,10 @@ skip_tags: true
 
 environment:
   GOPATH: c:\gopath
-  GOROOT: c:\go
+  GOROOT: C:\go-x86
 
 install:
-- set PATH=%GOPATH%\bin;c:\go\bin;%PATH%
+  - set PATH=%GOPATH%\bin;c:\go-x86\bin;%PATH%
 - go version
 - go env
 - mkdir c:\gopath\bin
