--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,8 @@
 version: "{build}"
 skip_tags: true
 
+clone_folder: c:\gopath\src\github.com\hashicorp\consul
+
 environment:
   GOPATH: c:\gopath
   GOROOT: C:\go-x86
@@ -10,10 +12,6 @@ install:
 - go version
 - go env
 - mkdir c:\gopath\bin
-- mkdir %GOPATH%\src\github.com\hashicorp
-- cd ..
-- move consul %GOPATH%\src\github.com\hashicorp
-- cd %GOPATH%\src\github.com\hashicorp\consul
 
 build_script:
 - make.bat
