--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,10 +8,11 @@ environment:
   GOROOT: C:\go-x86
 
 install:
+- set PATH
 - set PATH=%GOPATH%\bin;%GOROOT%\bin;%PATH%
 - go version
 - go env
-- mkdir c:\gopath\bin
+- mkdir %GOPATH%\bin
 
 build_script:
 - make.bat
